# TheClock

./: CMakeLists.txt  CMakePresets.json  README.md
source/: CMakeLists.txt  main.c
source/c++clock/: CMakeLists.txt  Clock.cpp  Clock.hpp  main.cpp
source/c-clock/: CMakeLists.txt  main.c
source/clock/: CMakeLists.txt  main.cpp
source/clock/clocks/: centisecond_clock.cpp  centisecond_clock.hpp  compound_clock.cpp  compound_clock.hpp  iclock.hpp  simple_clock.cpp  simple_clock.hpp
source/clock/components/: dial.cpp  dial.hpp  hand.cpp  hand.hpp  pin.cpp  pin.hpp  tick_marks.cpp  tick_marks.hpp
source/clock/time_sources/: isource.hpp  local_time_source.cpp  local_time_source.hpp  utc_time_source.cpp  utc_time_source.hpp
source/clock/utils/: constants.hpp  conversions.cpp  conversions.hpp  time_point.cpp  time_point.hpp
source/clock/widgets/: app_event.hpp  dial_change_event.hpp  event_system.cpp  event_system.hpp
source/prototype/: CMakeLists.txt
